After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 778009 - menu drawn on top of menubar in Fedora
menu drawn on top of menubar in Fedora
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Backend: Wayland
3.22.x
Other Linux
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2017-02-01 05:15 UTC by draymond
Modified: 2017-02-06 08:51 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
[PATCH] wayland: do not clamp anchor values (1.88 KB, patch)
2017-02-01 08:47 UTC, Olivier Fourdan
committed Details | Review

Description draymond 2017-02-01 05:15:30 UTC
When the user clicks on a menu item the menu is drawn on top of the menubar.  This hides the other menu items and the user can no longer select other menu items without first closing the current menu.  Expected behavior is for the menu to be drawn *below* the menu bar.

This issue was *not* present using GTK+ 3.22.2 (tested on a fresh installation of Fedora 25).  The bug appeared after doing a "dnf upgrade" which upgraded to GTK+ 3.22.7.
Comment 1 Olivier Fourdan 2017-02-01 07:49:23 UTC
Is that on Wayland or X11?

Can you also please give some more details on how to reproduce this, the menu looks fine here.
Comment 2 Olivier Fourdan 2017-02-01 07:53:58 UTC
Ah wait, yes, I see what you mean, the menu is misplaced.
Comment 3 Olivier Fourdan 2017-02-01 08:30:37 UTC
This is my fault actually, commit 9a5ffcd
Comment 4 Olivier Fourdan 2017-02-01 08:47:58 UTC
Created attachment 344690 [details] [review]
[PATCH] wayland: do not clamp anchor values

Clamping the anchor values as introduced in commit 9a5ffcd to fix bug
777176 breaks menu positioning.

By keeping the anchors rectangle size greater than zero, we end up
deducting some positive value from the original position, so there is no
need to clamp() actually, keeping the values positive is enough and
avoids the issue with menu positioning on the menubar.

An additional benefit is to make the code a lot simpler.
Comment 5 Jonas Ådahl 2017-02-06 07:35:18 UTC
Review of attachment 344690 [details] [review]:

Seems sane to me.
Comment 6 Olivier Fourdan 2017-02-06 08:51:17 UTC
Comment on attachment 344690 [details] [review]
[PATCH] wayland: do not clamp anchor values

attachment 344690 [details] [review] pushed to git master as commit afa78fc - wayland: do not clamp anchor values

attachment 344690 [details] [review] pushed to branch gtk-3-22 as commit 7ec16c5 - wayland: do not clamp anchor values